Adds hero scss file, changes font to monospace, adds sass maps for color, updates layout

--- a/src/assets/styles/css/custom.css
+++ b/src/assets/styles/css/custom.css
@@ -1,6 +1,6 @@
 /* GENERAL & SITE-WIDE RULES */
 body {
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'Roboto Mono', monospace;
 	font-weight: 300;
 	font-size:16px;
 }
