--- a/src/assets/styles/sass/main.scss
+++ b/src/assets/styles/sass/main.scss
@@ -10,6 +10,8 @@
 @import "shared/images";
 
 // Components
+@import "components/buttons";
+@import "components/hero";
 @import "components/navbar";
 @import "components/modal";
 @import "components/footer";
