--- a/src/assets/styles/sass/shared/_global.scss
+++ b/src/assets/styles/sass/shared/_global.scss
@@ -1,6 +1,6 @@
 /* GENERAL & SITE-WIDE RULES */
 body {
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'Roboto Mono', monospace;
 	font-weight: 300;
 	font-size:16px;
 }
@@ -15,19 +15,6 @@ h1, h2, h3, h4, h5 {
 
 .bold-text {
 	font-weight:700;
-}
-
-.btn {
-	border-radius:0px;
-	border:3px solid #fff;
-	background:transparent;
-	transition:linear all 0.3s;
-}
-
-.btn:hover{
-	background-color:#ffab32;
-	border-color:#ffab32;
-	transition:linear all 0.3s;
 }
 
 .clear-spacing{
@@ -46,10 +33,10 @@ h1, h2, h3, h4, h5 {
 
 .hero {
 	background-image: url('../img/cityscape.jpg'); /*url('../../assets/img/paper-stars-horz.jpg');*/
-	background-repeat:no-repeat;
-	background-position:center;
-	width:100%;
-	height:750px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 350px;
+	width: 100%;
 }
 
 .hero h1, .hero h2, .hero h3 {
