Changes background color to light grey, adjusts navbar links

--- a/src/assets/styles/sass/components/_hero.scss
+++ b/src/assets/styles/sass/components/_hero.scss
@@ -1,4 +1,4 @@
 #greeting {
-  background: rbga(map-get($neutrals, 'darkest') 0.25);
+  background-color: rgba(map-get($neutrals, 'darkest'), 0.5);
   height: 100%;
 }
