--- a/src/assets/styles/sass/shared/_utilities.scss
+++ b/src/assets/styles/sass/shared/_utilities.scss
@@ -5,9 +5,19 @@
 }
 
 .align {
-  &--centered {
+  &--left {
+    align-items: left;
     display: flex;
+  }
+
+  &--right {
+    align-items: right;
+    display: flex;
+  }
+
+  &--centered {
     align-items: center;
+    display: flex;
   }
 }
 
