--- a/src/assets/styles/sass/shared/_shared.scss
+++ b/src/assets/styles/sass/shared/_shared.scss
@@ -1,6 +1,7 @@
-@import "shared/normalize";
-@import "shared/global";
-@import "shared/layout";
-@import "shared/utilities";
-@import "shared/images";
-@import "shared/lists";
+@import "normalize";
+@import "global";
+@import "layout";
+@import "utilities";
+@import "images";
+@import "lists";
+@import "typography";
