--- a/src/assets/styles/sass/components/_components.scss
+++ b/src/assets/styles/sass/components/_components.scss
@@ -1,5 +1,5 @@
-@import "components/buttons";
-@import "components/hero";
-@import "components/navbar";
-@import "components/modal";
-@import "components/footer";
+@import "buttons";
+@import "hero";
+@import "navbar";
+@import "modal";
+@import "footer";
